1998-10-01  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (libgtop_postinstall): 
	Added `AC_SUBST(libgtop_postinstall)'. This is used in
	`src/daemon/Makefile.am' to make the server suid root or
	sgid kmem if required.

1998-09-28  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it accept libgtop >= 0.25.0 again.

	* gnome-libgtop-sysdeps.m4: Make the default not to build the
	LibGTop examples.

	* compiler-flags.m4 (--enable-warn-unused): New configure parameter
	to add `-Wunused' to the warning flags.
	
1998-09-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.2.

1998-09-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-ghttp-check.m4: Add checks for -lsocket -lnsl.

1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove commented out code.

1998-09-12  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added (AC_SUBST): `libgtop_have_sysinfo'.

1998-09-09  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-libgtop-sysdeps.m4: Added check for SMP support.
	(--with-libgtop-smp): New parameter, default is to enable
	it only if you're running configure on a SMP system.
	Added (AC_DEFINE): `HAVE_LIBGTOP_SMP' if enabled.
	(LIBGTOP_SMP): New automake conditional.

1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove check for `canonicalize_file_name'.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnome-support.m4: Check for canonicalize_file_name () and
 	realpath () and add `canonicalize.o' to LIBOBJS if required.

1998-08-30  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Added (AC_SUBST): `LIBGTOP_VERSION_CODE'.
	Added (AC_DEFINE_UNQUOTED): `LIBGTOP_VERSION', `LIBGTOP_VERSION_CODE',
	`LIBGTOP_{MAJOR,MINOR,MICRO,SERVER}_VERSION'.

1998-08-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.0.